Add image Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,31 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.stach.borys.wombatcalendar" >
+<manifest package="com.stach.borys.wombatcalendar"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.READ_CALENDAR" />
-    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+    <uses-permission android:name="android.permission.READ_CALENDAR"/>
+    <uses-permission android:name="android.permission.WRITE_CALENDAR"/>
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name="com.stach.borys.wombatcalendar.WeekActivity"
-            android:label="@string/app_name" >
+            android:name=".WeekActivity"
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-            android:name="com.stach.borys.wombatcalendar.DayActivity"
+            android:name=".DayActivity"
             android:label="@string/title_activity_day"
-            android:parentActivityName="com.stach.borys.wombatcalendar.WeekActivity" >
+            android:parentActivityName=".WeekActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.stach.borys.wombatcalendar.WeekActivity" />
+                android:value="com.stach.borys.wombatcalendar.WeekActivity"/>
+        </activity>
+        <activity android:name=".ImageActivity">
         </activity>
     </application>
 
