--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,11 @@
         </activity>
         <activity android:name=".ImageActivity">
         </activity>
+        <activity
+            android:name=".MonthActivity"
+            android:label="@string/title_activity_month"
+            android:theme="@style/AppTheme">
+        </activity>
     </application>
 
 </manifest>
