Start with widget

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,13 @@
             android:screenOrientation="portrait"
             android:parentActivityName=".WeekActivity">
         </activity>
+        <receiver android:name="Widget" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                       android:resource="@xml/widget" />
+        </receiver>
     </application>
 
 </manifest>
