--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.stach.borys.wombatcalendar"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 9
-        versionName "1.03"
+        versionCode 11
+        versionName "1.04"
     }
     buildTypes {
         release {
@@ -18,12 +18,24 @@ android {
         }
     }
 }
-
+ext {
+    supportLibrary = "25.0.0"
+    supportDependencies = [
+            design           : "com.android.support:design:${supportLibrary}",
+            recyclerView     : "com.android.support:recyclerview-v7:${supportLibrary}",
+            cardView         : "com.android.support:cardview-v7:${supportLibrary}",
+            support          : "com.android.support:support-v4:${supportLibrary}",
+            appCompat        : "com.android.support:appcompat-v7:${supportLibrary}",
+            supportAnnotation: "com.android.support:support-annotations:${supportLibrary}",
+            percent          : "com.android.support:percent:${supportLibrary}",
+    ]
+}
 dependencies {
+
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile supportDependencies.appCompat
+    compile supportDependencies.recyclerView
+    compile supportDependencies.design
     compile 'com.commit451:PhotoView:1.2.4'
     compile 'com.github.clans:fab:1.6.2'
 }
